# oopt-tai-implementations

./: .gitmodules  .travis.yml  README.md
.github/workflows/: ci.yml
tai_ac400/: .gitignore  Doxyfile  LICENSE  Makefile.am  README.md  configure.ac  tai_interface.ver
tai_ac400/inc/: ac400.h  voyager.h  voyager_tai_adapter.h
tai_ac400/src/: Makefile.am  ac400_tai_hostif.c  ac400_tai_interface.c  ac400_tai_module.c  ac400_tai_networkif.c  ac400_tai_utils.c  ac400_voyager.c
tai_mux/: .gitignore  Makefile  README.md  exec_platform_adapter.cpp  exec_platform_adapter.hpp  module_adapter.cpp  module_adapter.hpp  mux.cpp  mux.hpp  platform_adapter.cpp  platform_adapter.hpp  static_platform_adapter.cpp  static_platform_adapter.hpp  tai.cpp
tai_mux/custom_attrs/: mux_hostif.h  mux_module.h  mux_netif.h
tai_mux/test/: Makefile  run.sh  static.json  test.cpp
tai_mux/tests/: Makefile  exec.py  static.json  test.py
tai_mux/tests/custom_a/: module.h
tai_mux/tests/custom_b/: module.h
tai_sff/: .gitignore  Makefile  README.md  sff.cpp  sff.hpp  sff_fsm.cpp  sff_fsm.hpp
